[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kurousa", email = "r.takahashi.1026@gmail.com" }
]
dependencies = [
    "openai==1.29.0",
    "anthropic==0.25.7",
    "google-generativeai==0.5.2",
    "tiktoken==0.7.0",
    "streamlit==1.33.0",
    "langchain==0.1.16",
    "langchain-community==0.0.34",
    "langchain-openai==0.1.3",
    "langchain-core==0.1.46",
    "langchain-google-genai==1.0.3",
    "langchain-anthropic==0.1.11",
    "python-dotenv==1.0.0",
    "httpx==0.27.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
main = "python src/ai_agent/main.py"
streamlit = "streamlit"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ai_agent"]
