[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kurousa", email = "r.takahashi.1026@gmail.com" }
]
dependencies = [
    "openai==1.29.0",
    "anthropic==0.25.7",
    "google-generativeai==0.5.2",
    "tiktoken==0.7.0",
    "streamlit==1.33.0",
    "langchain==0.1.16",
    "langchain-community==0.0.34",
    "langchain-openai==0.1.3",
    "langchain-core==0.1.46",
    "langchain-google-genai==1.0.3",
    "langchain-anthropic==0.1.11",
    "python-dotenv==1.0.0",
    "httpx==0.27.2",
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "langchain-text-splitters==0.0.1",
    "youtube-transcript-api==0.6.2",
    "pytube==15.0.0",
    "charset-normalizer>=3.4.1",
    "chardet>=5.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.5",
]

[tool.rye.scripts]
streamlit = "streamlit"
chat = "streamlit run src/ai_agent/streamlit/chat.py"
website_summarizer = "streamlit run src/ai_agent/streamlit/website_summarizer.py"
image_recognizer = "streamlit run src/ai_agent/streamlit/image_recognizer.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ai_agent"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".rye",
]
